# fastapi-simple-app

./: Dockerfile  pyproject.toml
app/: __init__.py  config.py  create_admin.py  main.py
app/database/: __init__.py  models.py  utils.py
app/routers/: __init__.py  articles.py  users.py
app/tests/: utils.py
app/tests/routers/: test_articles.py  test_users.py
